--- a/doc/PR/PR12.md
+++ b/doc/PR/PR12.md
@@ -249,7 +249,7 @@ export default async function Image() {
     (
       <div
         style={{
-          background: 'linear-gradient(135deg, #667eea 0%, #764ba2 100%)',
+          background: 'linear-gradient(135deg, #06C755 0%, #00B900 100%)',
           // ... レイアウト設定
         }}
       >
